stars directive updates on click

--- a/public/views/geek.html
+++ b/public/views/geek.html
@@ -1,18 +1,13 @@
 <div class="jumbotron text-center col-md-8">
-	<h1>Rich App</h1>
-	<p>{{ tagline }}</p>
-	<p>{{ tagline }}</p>
-	<p>{{ tagline }}</p>
-	<p>{{ tagline }}</p>
-</div>
-<div class="col-md-4 text-center">
+	<h1>Directive Test</h1>
 	<ul class="list-group">
-		  <li class="list-group-item"> <h2> One </h2> </li>
+		  <li class="list-group-item"> <span> <h2> One </h2> <div star-Rating rating-value="rating" max="5"></div></span></li>
 		  <li class="list-group-item">Two</li>
 		  <li class="list-group-item">Three</li>
 		  <li class="list-group-item">Four</li>
 		  <li class="list-group-item">Five</li>
 	</ul>
+	
 </div>
 
 <div> Rating is {{rating}} <br/>
